<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/volunteer_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.kantu.pab_volunteers.ui.volunteer.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/activitiesFragment"
        android:name="com.kantu.pab_volunteers.ui.volunteer.activities.ActivitiesFragment"
        android:label="@string/nav_activities" />

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.kantu.pab_volunteers.ui.volunteer.schedule.ScheduleFragment"
        android:label="@string/nav_schedule" />

    <fragment
        android:id="@+id/communityFragment"
        android:name="com.kantu.pab_volunteers.ui.volunteer.community.CommunityFragment"
        android:label="@string/nav_community" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.kantu.pab_volunteers.ui.volunteer.profile.ProfileFragment"
        android:label="@string/nav_profile" />

    <fragment
        android:id="@+id/activityDetailsFragment"
        android:name="com.kantu.pab_volunteers.ui.volunteer.activities.ActivityDetailsFragment"
        android:label="@string/my_activities_title">
        <argument
            android:name="extra_activity_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/announcementDetailsFragment"
        android:name="com.kantu.pab_volunteers.ui.volunteer.community.AnnouncementDetailsFragment"
        android:label="@string/announcements_heading">
        <argument
            android:name="extra_announcement_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.kantu.pab_volunteers.ui.volunteer.profile.EditProfileFragment"
        android:label="@string/edit_profile_title" />

    <action
        android:id="@+id/action_global_activityDetailsFragment"
        app:destination="@id/activityDetailsFragment" />

    <action
        android:id="@+id/action_global_announcementDetailsFragment"
        app:destination="@id/announcementDetailsFragment" />

    <action
        android:id="@+id/action_global_editProfileFragment"
        app:destination="@id/editProfileFragment" />

</navigation>
